<resources>
    <string name="app_name">My Alarm</string>
    <string name="alarms">Alarms</string>
    <string name="timer">Timer</string>
    <string name="stopper">Stopper</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="play">Play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="go_back">Go back</string>
    <string name="label">Label</string>
    <string name="repeat">Repeat</string>
    <string name="days">Days</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="Cancel" />
    <string name="ok">OK</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="add">Add</string>
    <string name="mon">Mon</string>
    <string name="channel_name">alarm_channel</string>
    <string name="channel_description">This channel manages alarms</string>
    <string name="perform">Do you want to perform this action</string>
    <string name="delete_alarm">Delete alarm</string>
</resources>
