<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/text_tv_timer"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/_00_00_00"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306"
        android:gravity="center"/>

    <NumberPicker
        android:visibility="visible"
        android:id="@+id/num_picker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Num_picker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/num_picker3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num_picker1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <NumberPicker
        android:visibility="visible"
        android:id="@+id/num_picker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Num_picker"
        app:layout_constraintBottom_toBottomOf="@+id/num_picker2"
        app:layout_constraintEnd_toStartOf="@+id/num_picker2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <NumberPicker
        android:visibility="visible"
        android:id="@+id/num_picker3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Num_picker"
        app:layout_constraintBottom_toBottomOf="@+id/num_picker2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num_picker2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/start_fab_timer"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:src="@drawable/ic_baseline_play_arrow_48"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pause_fab_timer"
        app:tint="@color/blue"
        android:contentDescription="@string/play" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pause_fab_timer"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:src="@drawable/ic_baseline_pause_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/start_fab_timer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/stop_fab_timer"
        app:tint="@color/blue"
        android:contentDescription="@string/pause"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/stop_fab_timer"
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:src="@drawable/ic_stop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pause_fab_timer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/blue"
        android:contentDescription="@string/stop"/>


</androidx.constraintlayout.widget.ConstraintLayout>